Updated the img link
changed the image link to the correct dir

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <!-- Logo -->
          <a href="index.html">
-            <img src="../CM-MindCare/images/main-image-edited.jpg" alt="logo" class="h-16 md:h-24 object-contain">
+            <img src="./images/main-image-edited.jpg" alt="logo" class="h-16 md:h-24 object-contain">
         </a>
         <!-- Hamburger button (mobile only) -->
         <button @click="open = !open" :aria-expanded="open.toString()" aria-controls="mobile-menu"
@@ -69,7 +69,7 @@
     <!-- hero section -->
     <main class="md:mx-auto mb-6 flex flex-col md:flex-row justify-center">
         <div class="flex items-center justify-center p-8 bg-teal-800 md:w-1/2">
-            <img src="../CM-MindCare/images/main-image.jpg" alt=""
+            <img src="./images/main-image.jpg" alt=""
                 class="rounded-lg shadow-lg w-full max-w-xs md:max-w-md">
         </div>
         <div class="pb-12 p-2 md:p-10 mx-auto text-center md:text-left justify-center bg-sky-50 sm:h-60 md:h-130 md:w-1/2">
