--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </div>
       </div>
       <div>
-        <a href="about.html"><img src="../CM-MindCare/images/team-members.jpg" alt="superb team members"
+        <a href="about.html"><img src="./images/team-members.jpg" alt="superb team members"
           class="rounded-lg shadow" /></a>
       </div>
     </div>
