update index and contact page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -48,11 +50,12 @@
           <li><a href="">Achievements</a></li>
           <!-- <li><a href="#find-a-doctor">Team</a></li> -->
           <li><a href="contact.html">Contact</a></li>
+          <a class="btn-getstarted" href="">Chat Now</a>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="">Chat Now</a>
+      <!-- <a class="btn-getstarted" href="">Chat Now</a> -->
 
     </div>
   </header>
@@ -71,8 +74,8 @@
                   <i class="bi bi-telephone-fill"></i>
                   <div class="text">
                     <span class="label">24/7 Chat</span>
-                    <a href="">
-                    <span class="number">+(234)9168947722</span></a>
+                    <a href="https://wa.me/2349168947722">
+                      <span class="number">+(234)9168947722</span></a>
                   </div>
                 </div>
               </div>
@@ -100,18 +103,18 @@
 
               <div class="cta-section">
                 <div class="cta-buttons">
-                  <a href="#" class="btn btn-primary text-center">Chat Now</a>
+                  <a href="https://wa.me/2349168947722" class="btn btn-primary text-center">Chat Now</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="background-elements">
-        <div class="bg-shape shape-1"></div>
-        <div class="bg-shape shape-2"></div>
-        <div class="bg-pattern"></div>
-      </div>
+        <div class="background-elements">
+          <div class="bg-shape shape-1"></div>
+          <div class="bg-shape shape-2"></div>
+          <div class="bg-pattern"></div>
+        </div>
     </section><!-- /Hero Section -->
 
     <!-- Mission Section -->
@@ -122,9 +125,11 @@
         <div class="row">
           <div class="col-lg-8 mx-auto text-center mb-5" data-aos="fade-up" data-aos-delay="50">
             <h2 class="section-heading">Our Mission</h2>
-            <p class="lead-description">ChangeMakers Mindcare provides affordable, anonymous, and youth-friendly mental health support — connecting
-            students and young people
-            with professional care anytime, anywhere</div>
+            <p class="lead-description">ChangeMakers Mindcare provides affordable, anonymous, and youth-friendly mental
+              health support — connecting
+              students and young people
+              with professional care anytime, anywhere
+          </div>
         </div>
 
       </div>
@@ -163,8 +168,8 @@
           <div class="col-lg-10">
             <div class="search-header">
               <h2 style="color: teal;">Meet The Team</h2>
-              <p>Backed by a passionate team of clinical psychologists, psychiatrists, and counselors, 
-                we provide anonymous, professional support that helps students and youth overcome stress, anxiety, 
+              <p>Backed by a passionate team of clinical psychologists, psychiatrists, and counselors,
+                we provide anonymous, professional support that helps students and youth overcome stress, anxiety,
                 and everyday mental health challenges.
               </p>
             </div>
@@ -325,8 +330,8 @@
                     <!-- <div class="online-status active"></div> -->
                   </div>
                   <div class="specialist-data">
-                    <h3>Dr. Lisa Garcia</h3>
-                    <p class="specialty">Dermatologist</p>
+                    <h3>Dr. Lorem Ipsoum</h3>
+                    <p class="specialty">LOREMIPSOUMDOLLOR</p>
                     <!-- <div class="credentials">
                       <span class="badge">MD, FAAD</span>
                       <span class="experience">15 years</span>
@@ -361,8 +366,8 @@
                     <!-- <div class="online-status active"></div> -->
                   </div>
                   <div class="specialist-data">
-                    <h3>Dr. Daniel Wong</h3>
-                    <p class="specialty">Oncology Expert</p>
+                    <h3>Dr. Lorem Ipsoum</h3>
+                    <p class="specialty">LOREMIPSOUMDOLLOR</p>
                     <!-- <div class="credentials">
                       <span class="badge">MD, FASCO</span>
                       <span class="experience">21 years</span>
@@ -440,7 +445,7 @@
     </section>/Call To Action Section -->
 
     <!-- Specialists -->
-  <!-- <section class="px-6 py-16 my-8">
+    <!-- <section class="px-6 py-16 my-8">
     <div class="grid grid-cols-1 md:grid-cols-2 gap-10 max-w-6xl mx-auto items-center">
       <div>
         <h2 class="text-2xl font-bold text-teal-900 mb-6">
@@ -459,49 +464,49 @@
       </div>
     </div>
   </section> -->
-  <section class="px-3 py-5 my-4">
-  <div class="container-xl">
-    <div class="row g-4 align-items-center">
-      
-      <!-- Left Column -->
-      <div class="col-12 col-md-6">
-        <h2 class="h4 fw-bold text-teal mb-4">
-          We provide the best solutions for your mental well-being. Our qualified team is here to help you overcome;
-        </h2>
-        <div class="row g-3">
-          <div class="col-6">
-            <div class="bg-light p-3 text-secondary rounded shadow text-center fs-5 fw-medium">
-              Stress & Burnout
+    <section class="px-3 py-5 my-4">
+      <div class="container-xl">
+        <div class="row g-4 align-items-center">
+
+          <!-- Left Column -->
+          <div class="col-12 col-md-6">
+            <h2 class="h4 fw-bold text-teal mb-4">
+              We provide the best solutions for your mental well-being. Our qualified team is here to help you overcome;
+            </h2>
+            <div class="row g-3">
+              <div class="col-6">
+                <div class="bg-light p-3 text-secondary rounded shadow text-center fs-5 fw-medium">
+                  Stress & Burnout
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="bg-light p-3 text-secondary rounded shadow text-center fs-5 fw-medium">
+                  Anxiety & Depression
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="bg-light p-3 text-secondary rounded shadow text-center fs-5 fw-medium">
+                  Chronic Addictions
+                </div>
+              </div>
+              <div class="col-6">
+                <div class="bg-light p-3 text-secondary rounded shadow text-center fs-5 fw-medium">
+                  Psychiatric & Emotional Challenges
+                </div>
+              </div>
             </div>
           </div>
-          <div class="col-6">
-            <div class="bg-light p-3 text-secondary rounded shadow text-center fs-5 fw-medium">
-              Anxiety & Depression
-            </div>
+
+          <!-- Right Column -->
+          <div class="col-12 col-md-6">
+            <a href="about.html">
+              <img src="./images/team-members.jpg" alt="superb team members" class="img-fluid rounded shadow" />
+            </a>
           </div>
-          <div class="col-6">
-            <div class="bg-light p-3 text-secondary rounded shadow text-center fs-5 fw-medium">
-              Chronic Addictions
-            </div>
-          </div>
-          <div class="col-6">
-            <div class="bg-light p-3 text-secondary rounded shadow text-center fs-5 fw-medium">
-              Psychiatric & Emotional Challenges
-            </div>
-          </div>
+
         </div>
       </div>
-      
-      <!-- Right Column -->
-      <div class="col-12 col-md-6">
-        <a href="about.html">
-          <img src="./images/team-members.jpg" alt="superb team members" class="img-fluid rounded shadow" />
-        </a>
-      </div>
-
-    </div>
-  </div>
-</section>
+    </section>
 
 
   </main>
@@ -512,28 +517,28 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">MediNest</span>
+            <span class="sitename">CM MindCare</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
+            <p>No 01, Lorem Street</p>
+            <p>Ekiti State, NEK 535022</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+234 916 894 7722</span></p>
             <p><strong>Email:</strong> <span>info@example.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="https://x.com/CMMINDCARE01?t=FKnrGPTacmyucMPQ0xsGpQ&s=09"><i class="bi bi-twitter-x"></i></a>
+            <a href="https://www.facebook.com/share/19betMgbFc/"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/cmmindcare?igsh=MWY4d3c2b2JxYjJyMg=="><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/cm-mindcare-78693036a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <li><a href="#">Terms of service</a></li>
             <li><a href="#">Privacy policy</a></li>
           </ul>
@@ -543,7 +548,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong>MediNest</strong>&nbsp;<span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong>CM MindCare</strong>&nbsp;<span>All Rights Reserved</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
@@ -556,7 +561,8 @@
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
