--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,7 @@
             <div class="info-box">
               <i class="bi bi-geo-alt"></i>
               <h3>Our Address</h3>
-              <p>4582 Magnolia Avenue<br>Riverside, CA 92506</p>
+              <p>No 1, example street<br>Ekiti, CA 92506</p>
             </div>
           </div>
 
@@ -111,7 +111,7 @@
             <div class="info-box">
               <i class="bi bi-telephone"></i>
               <h3>Call Us</h3>
-              <p>+1 (951) 684-9123<br>+1 (951) 787-4534</p>
+              <p>+(234) 916 894 7722<br>+(234) 916 894 7722</p>
             </div>
           </div>
 
@@ -119,7 +119,7 @@
             <div class="info-box">
               <i class="bi bi-envelope"></i>
               <h3>Email Us</h3>
-              <p>contact@example.com<br>support@example.com</p>
+              <p>cmmindcareteam@gmail.com<br>cmmindcareteam@gmail.com</p>
             </div>
           </div>
         </div>
@@ -158,11 +158,11 @@
         </div>
 
         <div class="social-links text-center mt-5" data-aos="zoom-in" data-aos-delay="700">
-          <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-          <a href="#" class="youtube"><i class="bi bi-youtube"></i></a>
+          <a href="https://x.com/CMMINDCARE01?t=FKnrGPTacmyucMPQ0xsGpQ&s=09" class="twitter"><i class="bi bi-twitter"></i></a>
+          <a href="https://www.facebook.com/share/19betMgbFc/" class="facebook"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/cmmindcare?igsh=MWY4d3c2b2JxYjJyMg==" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/cm-mindcare-78693036a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.youtube.com/@CMMindcare" class="youtube"><i class="bi bi-youtube"></i></a>
         </div>
 
       </div>
@@ -177,63 +177,30 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="logo d-flex align-items-center">
-            <span class="sitename">MediNest</span>
+            <span class="sitename">CM MindCare</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
+            <p>No 01, Lorem Street</p>
+            <p>Ekiti State, NEK 535022</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+234 916 894 7722</span></p>
             <p><strong>Email:</strong> <span>info@example.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <a href="https://x.com/CMMINDCARE01?t=FKnrGPTacmyucMPQ0xsGpQ&s=09"><i class="bi bi-twitter-x"></i></a>
+            <a href="https://www.facebook.com/share/19betMgbFc/"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/cmmindcare?igsh=MWY4d3c2b2JxYjJyMg=="><i class="bi bi-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/cm-mindcare-78693036a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
             <li><a href="#">Terms of service</a></li>
             <li><a href="#">Privacy policy</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Our Services</h4>
-          <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Hic solutasetp</h4>
-          <ul>
-            <li><a href="#">Molestiae accusamus iure</a></li>
-            <li><a href="#">Excepturi dignissimos</a></li>
-            <li><a href="#">Suscipit distinctio</a></li>
-            <li><a href="#">Dilecta</a></li>
-            <li><a href="#">Sit quas consectetur</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h4>Nobis illum</h4>
-          <ul>
-            <li><a href="#">Ipsam</a></li>
-            <li><a href="#">Laudantium dolorum</a></li>
-            <li><a href="#">Dinera</a></li>
-            <li><a href="#">Trodelas</a></li>
-            <li><a href="#">Flexo</a></li>
           </ul>
         </div>
 
@@ -241,7 +208,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong>MediNest</strong>&nbsp;<span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong>CM MindCare</strong>&nbsp;<span>All Rights Reserved</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
