--- a/contact.html
+++ b/contact.html
@@ -55,11 +55,12 @@
           <li><a href="">Achievements</a></li>
           <!-- <li><a href="#find-a-doctor">Team</a></li> -->
           <li><a href="contact.html" class="active">Contact</a></li>
+      <a class="btn-getstarted" href="">Chat Now</a>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="">Chat Now</a>
+      <!-- <a class="btn-getstarted" href="">Chat Now</a> -->
 
     </div>
   </header>
