Update index and contact

--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,9 @@
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,14 +29,6 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: MediNest
-  * Template URL: https://bootstrapmade.com/medinest-bootstrap-hospital-template/
-  * Updated: Aug 11 2025 with Bootstrap v5.3.7
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="contact-page">
@@ -53,14 +47,11 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="#about.html">About</a></li>
           <li><a href="">Achievements</a></li>
-          <!-- <li><a href="#find-a-doctor">Team</a></li> -->
           <li><a href="contact.html" class="active">Contact</a></li>
-      <a class="btn-getstarted" href="">Chat Now</a>
+          <a class="btn-getstarted" href="">Chat Now</a>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
-
-      <!-- <a class="btn-getstarted" href="">Chat Now</a> -->
 
     </div>
   </header>
@@ -92,7 +83,7 @@
           </ol>
         </div>
       </nav>
-    </div><!-- End Page Title -->
+    </div>
 
     <!-- Contact Section -->
     <section id="contact" class="contact section">
@@ -128,7 +119,9 @@
         <div class="row gy-4 mt-4">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="500">
             <div class="map-container">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3308.4770376449556!2d-117.39905292424607!3d33.978802323820714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcb1f5d8fb6c75%3A0xd9d73340c90a71c6!2s4582%20Magnolia%20Ave%2C%20Riverside%2C%20CA%2092506!5e0!3m2!1sen!2sus!4v1692395638095!5m2!1sen!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3308.4770376449556!2d-117.39905292424607!3d33.978802323820714!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dcb1f5d8fb6c75%3A0xd9d73340c90a71c6!2s4582%20Magnolia%20Ave%2C%20Riverside%2C%20CA%2092506!5e0!3m2!1sen!2sus!4v1692395638095!5m2!1sen!2sus"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
 
@@ -159,10 +152,13 @@
         </div>
 
         <div class="social-links text-center mt-5" data-aos="zoom-in" data-aos-delay="700">
-          <a href="https://x.com/CMMINDCARE01?t=FKnrGPTacmyucMPQ0xsGpQ&s=09" class="twitter"><i class="bi bi-twitter"></i></a>
+          <a href="https://x.com/CMMINDCARE01?t=FKnrGPTacmyucMPQ0xsGpQ&s=09" class="twitter"><i
+              class="bi bi-twitter"></i></a>
           <a href="https://www.facebook.com/share/19betMgbFc/" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="https://www.instagram.com/cmmindcare?igsh=MWY4d3c2b2JxYjJyMg==" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="https://www.linkedin.com/in/cm-mindcare-78693036a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.instagram.com/cmmindcare?igsh=MWY4d3c2b2JxYjJyMg==" class="instagram"><i
+              class="bi bi-instagram"></i></a>
+          <a href="https://www.linkedin.com/in/cm-mindcare-78693036a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+            class="linkedin"><i class="bi bi-linkedin"></i></a>
           <a href="https://www.youtube.com/@CMMindcare" class="youtube"><i class="bi bi-youtube"></i></a>
         </div>
 
@@ -190,7 +186,9 @@
             <a href="https://x.com/CMMINDCARE01?t=FKnrGPTacmyucMPQ0xsGpQ&s=09"><i class="bi bi-twitter-x"></i></a>
             <a href="https://www.facebook.com/share/19betMgbFc/"><i class="bi bi-facebook"></i></a>
             <a href="https://www.instagram.com/cmmindcare?igsh=MWY4d3c2b2JxYjJyMg=="><i class="bi bi-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/cm-mindcare-78693036a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="bi bi-linkedin"></i></a>
+            <a
+              href="https://www.linkedin.com/in/cm-mindcare-78693036a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
+                class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
@@ -211,10 +209,6 @@
     <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong>CM MindCare</strong>&nbsp;<span>All Rights Reserved</span></p>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
@@ -222,7 +216,8 @@
   </footer>
 
   <!-- Scroll Top -->
-  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
   <div id="preloader"></div>
