--- a/index.html
+++ b/index.html
@@ -134,30 +134,7 @@
 
       </div>
 
-    </section><!-- /Home About Section -->
-
-    <!-- Featured Departments Section -->
-    <!-- <section id="featured-departments" class="featured-departments section">
-
-      <div class="container" data-aos="fade-up" data-aos-delay="50">
-
-        <div class="departments-showcase">
-
-          <div class="departments-cta" data-aos="fade-up" data-aos-delay="600">
-            <div class="cta-content">
-              <h3 class="cta-title" id="about">About Us</h3>
-              <p class="cta-description">
-                ChangeMakers Mindcare was founded by Samuel Oyewole Ajayi with a simple but powerful vision: 
-                to make mental health care affordable, accessible, and stigma-free for young people.
-              </p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-
-    </section> -->
+    </section>
 
     <!-- meet the team -->
     <section id="find-a-doctor" class="find-a-doctor section">
@@ -188,28 +165,9 @@
                   <div class="specialist-data">
                     <h3>Samuel Ajayi</h3>
                     <p class="specialty">Founder</p>
-                    <!-- <div class="credentials">
-                      <span class="badge">MD, FACC</span>
-                      <span class="experience">18 years</span>
-                    </div> -->
                   </div>
                 </div>
-                <!-- <div class="rating-info">
-                  <div class="stars-display">
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                  </div>
-                  <span class="score">4.9</span>
-                  <small>(142 patients)</small>
-                </div> -->
               </div>
-              <!-- <div class="quick-actions">
-                <a href="#" class="action-btn outline">Profile</a>
-                <a href="#" class="action-btn primary">Consult</a>
-              </div> -->
             </div>
           </div>
 
@@ -219,33 +177,13 @@
                 <div class="profile-section">
                   <div class="profile-image">
                     <img src="./images/team-members-g.jpg" alt="Dr. Robert Kim" class="img-fluid">
-                    <!-- <div class="online-status busy"></div> -->
                   </div>
                   <div class="specialist-data">
                     <h3>Renata Martins</h3>
                     <p class="specialty">Head of Clinical Psychology</p>
-                    <!-- <div class="credentials">
-                      <span class="badge">MD, PhD</span>
-                      <span class="experience">24 years</span>
-                    </div> -->
                   </div>
                 </div>
-                <!-- <div class="rating-info">
-                  <div class="stars-display">
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-half"></i>
-                  </div>
-                  <span class="score">4.8</span>
-                  <small>(98 patients)</small>
-                </div> -->
               </div>
-              <!-- <div class="quick-actions">
-                <a href="#" class="action-btn outline">Profile</a>
-                <a href="#" class="action-btn primary">Schedule</a>
-              </div> -->
             </div>
           </div>
 
@@ -255,33 +193,13 @@
                 <div class="profile-section">
                   <div class="profile-image">
                     <img src="./images/teammembers-mb.jpg" alt="Dr. Sarah Thompson" class="img-fluid">
-                    <!-- <div class="online-status active"></div> -->
                   </div>
                   <div class="specialist-data">
                     <h3>Dr. Igbinlade Segun</h3>
                     <p class="specialty">Head of Psychiatry</p>
-                    <!-- <div class="credentials">
-                      <span class="badge">MD, FAAP</span>
-                      <span class="experience">12 years</span>
-                    </div> -->
                   </div>
                 </div>
-                <!-- <div class="rating-info">
-                  <div class="stars-display">
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                  </div>
-                  <span class="score">5.0</span>
-                  <small>(156 patients)</small>
-                </div> -->
               </div>
-              <!-- <div class="quick-actions">
-                <a href="#" class="action-btn outline">Profile</a>
-                <a href="#" class="action-btn primary">Book Now</a>
-              </div> -->
             </div>
           </div>
 
@@ -291,33 +209,13 @@
                 <div class="profile-section">
                   <div class="profile-image">
                     <img src="./images/team-members-og.jpg" alt="Dr. Michael Rivera" class="img-fluid">
-                    <!-- <div class="online-status offline"></div> -->
                   </div>
                   <div class="specialist-data">
                     <h3>Dirime Payebo</h3>
                     <p class="specialty">Project Manager</p>
-                    <!-- <div class="credentials">
-                      <span class="badge">MD, FAAOS</span>
-                      <span class="experience">20 years</span>
-                    </div> -->
                   </div>
                 </div>
-                <!-- <div class="rating-info">
-                  <div class="stars-display">
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-half"></i>
-                  </div>
-                  <span class="score">4.7</span>
-                  <small>(134 patients)</small>
-                </div> -->
               </div>
-              <!-- <div class="quick-actions">
-                <a href="#" class="action-btn outline">Profile</a>
-                <a href="#" class="action-btn primary">Request</a>
-              </div> -->
             </div>
           </div>
 
@@ -327,33 +225,13 @@
                 <div class="profile-section">
                   <div class="profile-image">
                     <img src="./images/main-head-image.jpg" alt="Dr. Lisa Garcia" class="img-fluid">
-                    <!-- <div class="online-status active"></div> -->
                   </div>
                   <div class="specialist-data">
                     <h3>Dr. Lorem Ipsoum</h3>
                     <p class="specialty">LOREMIPSOUMDOLLOR</p>
-                    <!-- <div class="credentials">
-                      <span class="badge">MD, FAAD</span>
-                      <span class="experience">15 years</span>
-                    </div> -->
                   </div>
                 </div>
-                <!-- <div class="rating-info">
-                  <div class="stars-display">
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star"></i>
-                  </div>
-                  <span class="score">4.6</span>
-                  <small>(89 patients)</small>
-                </div> -->
               </div>
-              <!-- <div class="quick-actions">
-                <a href="#" class="action-btn outline">Profile</a>
-                <a href="#" class="action-btn primary">Consult</a>
-              </div> -->
             </div>
           </div>
 
@@ -363,33 +241,13 @@
                 <div class="profile-section">
                   <div class="profile-image">
                     <img src="./images/main-head-image.jpg" alt="Dr. Daniel Wong" class="img-fluid">
-                    <!-- <div class="online-status active"></div> -->
                   </div>
                   <div class="specialist-data">
                     <h3>Dr. Lorem Ipsoum</h3>
                     <p class="specialty">LOREMIPSOUMDOLLOR</p>
-                    <!-- <div class="credentials">
-                      <span class="badge">MD, FASCO</span>
-                      <span class="experience">21 years</span>
-                    </div> -->
                   </div>
                 </div>
-                <!-- <div class="rating-info">
-                  <div class="stars-display">
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                    <i class="bi bi-star-fill"></i>
-                  </div>
-                  <span class="score">4.9</span>
-                  <small>(211 patients)</small>
-                </div> -->
               </div>
-              <!-- <div class="quick-actions">
-                <a href="#" class="action-btn outline">Profile</a>
-                <a href="#" class="action-btn primary">Appointment</a>
-              </div> -->
             </div>
           </div>
 
@@ -397,73 +255,8 @@
 
       </div>
 
-    </section><!-- /Find A Doctor Section -->
+    </section>
 
-    <!-- Call To Action Section -->
-    <!-- <section id="call-to-action" class="call-to-action section light-background">
-
-      <div class="container" data-aos="fade-up" data-aos-delay="50">
-
-        <div class="services-grid" data-aos="fade-up" data-aos-delay="250">
-          <div class="row">
-
-            <div class="col-lg-4 col-md-6">
-              <div class="service-card" data-aos="fade-up" data-aos-delay="50">
-                <div class="service-icon">
-                  <i class="fas fa-heartbeat"></i>
-                </div>
-                <h4>Private Sessions</h4>
-                <p>Private one-on-one sessions with trained mental health professionals.</p>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-              <div class="service-card" data-aos="fade-up" data-aos-delay="100">
-                <div class="service-icon">
-                  <i class="fas fa-brain"></i>
-                </div>
-                <h4>Accessible</h4>
-                <p>24/7 online access to support</p>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6">
-              <div class="service-card" data-aos="fade-up" data-aos-delay="150">
-                <div class="service-icon">
-                  <i class="fas fa-shield-alt"></i>
-                </div>
-                <h4>Anonimity</h4>
-                <p>You can remain anonymous while you use our services</p>
-              </div>
-            </div>
-
-          </div>
-        </div>
-
-      </div>
-
-    </section>/Call To Action Section -->
-
-    <!-- Specialists -->
-    <!-- <section class="px-6 py-16 my-8">
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-10 max-w-6xl mx-auto items-center">
-      <div>
-        <h2 class="text-2xl font-bold text-teal-900 mb-6">
-          We provide the best solutions for your mental well-being. Our qualified team is here to help you overcome;
-        </h2>
-        <div class="grid grid-cols-2 gap-4">
-          <div class="bg-sky-50 p-4 text-gray-700 rounded shadow text-center text-lg font-medium">Stress & Burnout</div>
-          <div class="bg-sky-50 p-4 text-gray-700 rounded shadow text-center text-lg font-medium">Anxiety & Depression</div>
-          <div class="bg-sky-50 p-4 text-gray-700 rounded shadow text-center text-lg font-medium">Chronic Addictions</div>
-          <div class="bg-sky-50 p-4 text-gray-700 rounded shadow text-center text-lg font-medium">Psychiatric & Emotional Challenges</div>
-        </div>
-      </div>
-      <div>
-        <a href="about.html"><img src="./images/team-members.jpg" alt="superb team members"
-          class="rounded-lg shadow" /></a>
-      </div>
-    </div>
-  </section> -->
     <section class="px-3 py-5 my-4">
       <div class="container-xl">
         <div class="row g-4 align-items-center">
@@ -529,7 +322,9 @@
             <a href="https://x.com/CMMINDCARE01?t=FKnrGPTacmyucMPQ0xsGpQ&s=09"><i class="bi bi-twitter-x"></i></a>
             <a href="https://www.facebook.com/share/19betMgbFc/"><i class="bi bi-facebook"></i></a>
             <a href="https://www.instagram.com/cmmindcare?igsh=MWY4d3c2b2JxYjJyMg=="><i class="bi bi-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/cm-mindcare-78693036a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="bi bi-linkedin"></i></a>
+            <a
+              href="https://www.linkedin.com/in/cm-mindcare-78693036a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i
+                class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
@@ -550,10 +345,6 @@
     <div class="container copyright text-center mt-4">
       <p>© <span>Copyright</span> <strong>CM MindCare</strong>&nbsp;<span>All Rights Reserved</span></p>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
         Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
