create about ans achievements pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Mind Care</title>
+  <title>Home - CM Mind Care</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -46,11 +46,11 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="#top" class="active">Home</a></li>
-          <li><a href="a#bout.html">About</a></li>
-          <li><a href="">Achievements</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="achievements.html">Achievements</a></li>
           <!-- <li><a href="#find-a-doctor">Team</a></li> -->
           <li><a href="contact.html">Contact</a></li>
-          <a class="btn-getstarted" href="">Chat Now</a>
+          <a class="btn-getstarted" href="https://wa.me/2349168947722">Chat Now</a>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -332,7 +332,7 @@
           <h4>Useful Links</h4>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">About us</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="#">Terms of service</a></li>
             <li><a href="#">Privacy policy</a></li>
