--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Contact - MediNest Bootstrap Template</title>
+  <title>Contact - CM MindCare</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -45,10 +45,10 @@
       <nav id="navmenu" class="navmenu">
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="#about.html">About</a></li>
-          <li><a href="">Achievements</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="achievements.html">Achievements</a></li>
           <li><a href="contact.html" class="active">Contact</a></li>
-          <a class="btn-getstarted" href="">Chat Now</a>
+          <a class="btn-getstarted" href="https://wa.me/2349168947722">Chat Now</a>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
@@ -64,13 +64,13 @@
         <div class="container">
           <div class="row d-flex justify-content-center text-center">
             <div class="col-lg-8">
-              <h1 class="heading-title">Contact</h1>
-              <p class="mb-0">
+              <h1 class="heading-title">Contact Us</h1>
+              <!-- <p class="mb-0">
                 Odio et unde deleniti. Deserunt numquam exercitationem. Officiis quo
                 odio sint voluptas consequatur ut a odio voluptatem. Sit dolorum
                 debitis veritatis natus dolores. Quasi ratione sint. Sit quaerat
                 ipsum dolorem.
-              </p>
+              </p> -->
             </div>
           </div>
         </div>
@@ -196,7 +196,7 @@
           <h4>Useful Links</h4>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">About us</a></li>
+            <li><a href="about.html">About us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
             <li><a href="#">Terms of service</a></li>
             <li><a href="#">Privacy policy</a></li>
